--- a/practice.html
+++ b/practice.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
 
-  <body>
+  <body class="practice-page">
+
     <div class="bg"></div>
 
     <header class="topbar">
@@ -24,26 +25,22 @@
       </nav>
     </header>
 
-    <main class="container">
+<main class="container practice-container">
       <section class="hero practice">
         <div class="practice-top">
           <div class="stats">
             <div class="stat">
-              <div class="stat-label">Score</div>
+              <div class="stat-label">Richtig</div>
               <div class="stat-value" id="score">0</div>
             </div>
             <div class="stat">
-              <div class="stat-label">Streak</div>
-              <div class="stat-value" id="streak">0</div>
+              <div class="stat-label">Trefferquote</div>
+              <div class="stat-value" id="accuracy">0%</div>
             </div>
             <div class="stat">
               <div class="stat-label">Gesamt</div>
               <div class="stat-value" id="total">0</div>
             </div>
-          </div>
-
-          <div class="hint" id="hint">
-            Tipp: Verlass dich nicht auf Hautglätte oder “schöne” Bilder. Achte eher auf Gesamteindruck & Individualität.
           </div>
         </div>
 
@@ -57,10 +54,13 @@
         <div class="actions">
           <button class="primary" id="btnReal" type="button">Echt</button>
           <button class="primary" id="btnFake" type="button">KI</button>
-          <button class="ghost" id="btnSkip" type="button">Überspringen</button>
         </div>
 
-        <div class="feedback" id="feedback" role="status"></div>
+        <div class="under-image">
+  <div class="feedback big" id="feedback" role="status"></div>
+  <button class="ghost next" id="btnNext" type="button" disabled>Weiter</button>
+</div>
+
       </section>
     </main>
 
