--- a/practice.html
+++ b/practice.html
@@ -25,7 +25,8 @@
       </nav>
     </header>
 
-<main class="container practice-container">
+<main class="practice-container">
+
       <section class="hero practice">
         <div class="practice-top">
           <div class="stats">
