Add Pretest Modal

--- a/pretest.html
+++ b/pretest.html
@@ -1,75 +1,99 @@
 <!doctype html>
 <html lang="de">
-<head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Pretest – AI Face Training</title>
-<link rel="stylesheet" href="styles.css" />
-</head>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Pretest – AI Face Training</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
 
-<body class="practice-page">
+  <body class="practice-page">
+    <div class="bg"></div>
 
-<div class="bg"></div>
+    <header class="topbar">
+      <div class="brand">
+        <div class="logo">◉</div>
+        <div>
+          <div class="brand-title">Pretest</div>
+          <div class="brand-subtitle">30 Bilder • Echt vs. KI</div>
+        </div>
+      </div>
+      <a class="ghost link" href="index.html">← Menü</a>
+    </header>
 
-<header class="topbar">
-  <div class="brand">
-    <div class="logo">◉</div>
-    <div>
-      <div class="brand-title">Pretest</div>
-      <div class="brand-subtitle">Ohne Tipps – nur Intuition</div>
+    <main class="practice-container">
+      <section class="hero practice">
+
+        <div class="practice-top">
+          <div class="stats">
+            <div class="stat">
+              <div class="stat-label">Richtig</div>
+              <div class="stat-value" id="score">0</div>
+            </div>
+            <div class="stat">
+              <div class="stat-label">Fortschritt</div>
+              <div class="stat-value" id="progress">1/30</div>
+            </div>
+            <div class="stat">
+              <div class="stat-label">Gesamt</div>
+              <div class="stat-value" id="total">0</div>
+            </div>
+          </div>
+        </div>
+
+        <div class="practice-row">
+          <!-- Bild -->
+          <div class="img-wrap">
+            <img id="faceImg" alt="Gesicht für den Pretest" />
+          </div>
+
+          <!-- Rechte Seite -->
+          <div class="side-controls">
+            <button class="primary big" id="btnReal" type="button">Echt</button>
+            <button class="primary big" id="btnFake" type="button">KI</button>
+
+            <div class="result-box">
+              <div class="badge" id="feedbackBadge" aria-hidden="true"></div>
+              <div class="result-text" id="resultText"></div>
+            </div>
+
+            <button class="ghost next" id="btnNext" type="button" disabled>Weiter</button>
+          </div>
+        </div>
+
+      </section>
+    </main>
+
+    <!-- ======= GROSSES ERGEBNIS-MODAL ======= -->
+    <div class="modal" id="resultModal" aria-hidden="true">
+      <div class="modal-card" role="dialog" aria-modal="true" aria-labelledby="resultTitle">
+        <div class="modal-head">
+          <div>
+            <div class="modal-title" id="resultTitle">Pretest abgeschlossen</div>
+            <div class="modal-subtitle" id="resultSubtitle"></div>
+          </div>
+          <div class="modal-actions">
+            <button class="ghost" id="btnRestartPretest" type="button">Neu starten</button>
+            <button class="ghost" id="btnCloseModal" type="button">Schließen</button>
+          </div>
+        </div>
+
+        <div class="modal-summary" id="resultSummary"></div>
+
+        <div class="modal-grid">
+          <div class="modal-panel">
+            <div class="panel-title">✅ Richtig</div>
+            <div id="correctWrap"></div>
+          </div>
+
+          <div class="modal-panel">
+            <div class="panel-title">❌ Falsch</div>
+            <div id="wrongWrap"></div>
+          </div>
+        </div>
+      </div>
     </div>
-  </div>
 
-  <a class="ghost link" href="index.html">← Menü</a>
-</header>
-
-<main class="practice-container">
-<section class="hero practice">
-
-<div class="practice-top">
-  <div class="stats">
-    <div class="stat">
-      <div class="stat-label">Fortschritt</div>
-      <div class="stat-value" id="progress">1/30</div>
-    </div>
-
-    <div class="stat">
-      <div class="stat-label">Richtig</div>
-      <div class="stat-value" id="score">0</div>
-    </div>
-
-    <div class="stat">
-      <div class="stat-label">Gesamt</div>
-      <div class="stat-value" id="total">0</div>
-    </div>
-  </div>
-</div>
-
-<div class="practice-row">
-
-  <div class="img-wrap">
-    <img id="faceImg" />
-  </div>
-
-  <div class="side-controls">
-
-    <button class="primary big" id="btnReal">Echt</button>
-    <button class="primary big" id="btnFake">KI</button>
-
-    <div class="result-box">
-      <div class="badge" id="feedbackBadge"></div>
-      <div class="result-text" id="resultText"></div>
-    </div>
-
-    <button class="ghost next" id="btnNext" disabled>Weiter</button>
-
-  </div>
-
-</div>
-
-</section>
-</main>
-
-<script src="pretest.js"></script>
-</body>
+    <script src="pretest.js"></script>
+  </body>
 </html>
